// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<tr
  className="cf-table__row cf-table__row--default"
>
  TableRow
</tr>
`;

exports[`should render extra class name 1`] = `
<tr
  className="cf-table__row cf-table__row--default extra"
>
  TableRow
</tr>
`;

exports[`should render with accent 1`] = `
<tr
  className="cf-table__row cf-table__row--default cf-table__row--accent-orange"
>
  TableRow
</tr>
`;

exports[`should render with type 1`] = `
<tr
  className="cf-table__row cf-table__row--error"
>
  TableRow
</tr>
`;
